# cros-codecs

./: Cargo.toml
src/: bitstream_utils.rs  encoder.rs  lib.rs  video_frame.rs
src/backend/v4l2/: encoder.rs
src/backend/vaapi/: decoder.rs  encoder.rs  surface_pool.rs
src/c2_wrapper/: c2_decoder.rs  c2_encoder.rs
src/codec/av1/: synthesizer.rs  writer.rs
src/codec/h264/: nalu_writer.rs  parser.rs  synthesizer.rs
src/decoder/: stateless.rs
src/decoder/stateless/av1/: vaapi.rs
src/decoder/stateless/h264/: vaapi.rs
src/decoder/stateless/vp8/: vaapi.rs
src/decoder/stateless/vp9/: vaapi.rs
src/encoder/: stateless.rs
src/encoder/stateless/: av1.rs  predictor.rs
src/encoder/stateless/av1/: predictor.rs  vaapi.rs
src/encoder/stateless/h264/: predictor.rs  vaapi.rs
src/encoder/stateless/vp9/: vaapi.rs
src/video_frame/: frame_pool.rs  generic_dma_video_frame.rs
